--- a/app/src/main/res/layout/stocks_row_layout.xml
+++ b/app/src/main/res/layout/stocks_row_layout.xml
@@ -43,6 +43,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="TextView"
+        android:textStyle="italic"
         app:layout_constraintStart_toStartOf="@+id/codeText"
         app:layout_constraintTop_toBottomOf="@+id/codeText" />
 </androidx.constraintlayout.widget.ConstraintLayout>
