--- a/app/src/main/res/layout/stocks_row_layout.xml
+++ b/app/src/main/res/layout/stocks_row_layout.xml
@@ -12,7 +12,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="TextView"
-        android:textSize="18sp"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
         android:text="TextView"
-        android:textSize="18sp"
+        android:textSize="20sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/codeText"
         app:layout_constraintStart_toEndOf="@+id/codeText" />
 
@@ -33,6 +33,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginEnd="8dp"
         android:text="TextView"
+        android:textSize="20sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/priceText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/priceText" />
@@ -46,4 +47,13 @@
         android:textStyle="italic"
         app:layout_constraintStart_toStartOf="@+id/codeText"
         app:layout_constraintTop_toBottomOf="@+id/codeText" />
+
+    <TextView
+        android:id="@+id/changeSymbol"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toStartOf="@+id/dataText"
+        app:layout_constraintTop_toTopOf="@+id/dataText" />
 </androidx.constraintlayout.widget.ConstraintLayout>
